Add documentation to README

--- a/projects/ngx-joypixels/package.json
+++ b/projects/ngx-joypixels/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ngx-joypixels",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^10.2.0",
-    "@angular/core": "^10.2.0"
+    "@angular/core": "^10.2.0",
+    "emoji-toolkit": "^6.0.1"
   },
   "dependencies": {
     "tslib": "^2.0.0"
