--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,13 @@
             "main": "projects/ngx-joypixels/src/test.ts",
             "tsConfig": "projects/ngx-joypixels/tsconfig.spec.json",
             "karmaConfig": "projects/ngx-joypixels/karma.conf.js"
+          },
+          "configurations": {
+            "ci": {
+              "watch": false,
+              "progress": false,
+              "browsers": "ChromeHeadless"
+            }
           }
         },
         "lint": {
@@ -42,6 +49,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ngx-joypixels"
 }
